bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: ';' expected but ')' found.
  return(((a<21)&&(a>9))||(b<21)&&(b>9)))
                                        ^